fix: Scheduleを日付順にソートして最も早い日を予定日に入れる